--- a/GUI/Login.css
+++ b/GUI/Login.css
@@ -1,8 +1,60 @@
 @import url("Fonts/fonts.css");
 
-h1 {
-    padding-top: 80px;
+
+*{
+    
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #2F243A;
     text-align: center;
-    font-family: "arvobold";
-    color: blueviolet;
+    
+    
+}
+
+
+h1 {
+    padding-top: 50px;
+    color: rgb(184, 162, 162);
+}
+
+.textbox {
+    width: 210px;
+    height: 20px;
+    border-radius: 10px;
+    border: 2px solid #7E1F86;
+    background-color: rgb(186, 176, 176);
+    font-size: 20px;
+    color: rgb(30, 28, 28);
+    padding: 10px;
+    
+
+}
+
+.logo {
+    width: 100px;
+    cursor: pointer;
+    
+}
+
+.row{
+    
+   
+
+}
+.col-1{
+    
+    
+    
+}
+
+.col-1 h2{
+    font-size: 30px;
+}
+button{
+    
+    border-radius: 10px;
+    width: 210px;
+    height: 50px;
+    cursor: pointer;
+    border: 0;
+    background: linear-gradient(to right, #7E1F86, #9D79BC);
 }
